--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-
+/*Variables*/
 :root {
     --oscuro: #21242e;
     --amarillo: #ffd169;
@@ -20,9 +20,7 @@
     --fuente: "Nunito", sans-serif;
 }
 
-/* ================================
-    ESTILOS GENERALES
-================================ */
+/* Estilos*/
 body {
     font-family: var(--fuente);
     background: var(--oscuro);
@@ -30,7 +28,6 @@ body {
     line-height: 1.7;
 }
 
-/* Suavidad en desplazamiento */
 html {
     scroll-behavior: smooth;
 }
@@ -42,7 +39,6 @@ header {
     align-items: center;
 }
 
-/* Logo EG minimal lineal */
 .logo {
     display: flex;
     align-items: center;
@@ -92,7 +88,7 @@ nav a::after {
 nav a:hover::after {
     width: 100%;
 }
-
+/*Hero*/
 .hero {
     padding: 6rem 1rem;
     text-align: center;
@@ -109,7 +105,7 @@ nav a:hover::after {
     font-size: 1.2rem;
     opacity: 0.9;
 }
-
+/*Sobre mi*/
 .sobre-mi {
     max-width: 850px;
     margin: 3rem auto;
@@ -118,7 +114,6 @@ nav a:hover::after {
     border-radius: var(--radio);
     border: 1px solid rgba(255,255,255,0.05);
 }
-
 
 .sobre-mi h2,
 .portafolio h2,
@@ -163,7 +158,7 @@ nav a:hover::after {
     opacity: 0.85;
     transition: opacity .3s ease;
 }
-
+/*Portafolio*/
 .portafolio {
     padding: 2rem;
     max-width: 1200px;
@@ -199,7 +194,7 @@ nav a:hover::after {
     margin-top: 0.7rem;
     color: var(--amarillo);
 }
-
+/*Contacto*/
 .contacto {
     max-width: 600px;
     margin: 4rem auto;
@@ -237,7 +232,7 @@ button:hover {
     background: var(--rojo);
     color: var(--blanco);
 }
-
+/*footer*/
 footer {
     text-align: center;
     padding: 1.5rem;
